# aws-crt-dotnet

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  NOTICE  README.md  aws-crt.Net35.sln  aws-crt.sln  builder.json  clean_rebuild.bat  clean_rebuild.sh  format-check.py  format-check.sh  global.json  nuget.config
.builder/: dotnet.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  mac-osx-ci.yml
aws-common-runtime/: CMakeLists.txt
aws-common-runtime/cmake/: BuildAwsCCommon.cmake  BuildAwsCHttp.cmake  BuildAwsCIO.cmake  BuildS2N.cmake
aws-crt/: CRT.cs  CrtResult.cs  EventLoopGroup.cs  NativeAPI.cs  Platform.cs  ReferenceVendor.cs  aws-crt.Net35.csproj  aws-crt.csproj  aws-crt.sln
aws-crt-auth/: Auth.cs  Credentials.cs  Signing.cs  aws-crt-auth.Net35.csproj  aws-crt-auth.csproj
aws-crt-cal/: Cal.cs  Hash.cs  aws-crt-cal.csproj
aws-crt-checksums/: Crc.cs  aws-crt-checksums.csproj
aws-crt-http/: Class1.cs  Http.cs  HttpClientConnectionManager.cs  HttpConnection.cs  aws-crt-http.Net35.csproj  aws-crt-http.csproj
aws-crt/IO/: ClientBootstrap.cs  CrtStream.cs  EventLoopGroup.cs  HostResolver.cs  Logger.cs  SocketOptions.cs  TlsContext.cs
codebuild/: common-android.sh  common-posix.sh  common-windows.bat  format-check.sh  install-dotnet.bat  linux-clang3-x64.yml  linux-clang6-x64.yml  linux-clang8-x64.yml  linux-gcc-4x-x64.yml  linux-gcc-5x-x64.yml  linux-gcc-6x-x64.yml  linux-gcc-7x-x64.yml  win-build-x64-cd.bat  win-x64-cd-dev.yml  windows-msvc-2015-x86.yml  windows-msvc-2015.yml  windows-msvc-2017.yml
codebuild/cd/: combine-builds-a.yml  combine-builds-b.yml  deploy-snapshot.yml  linux-arm64-build.sh  linux-x64-build-al2.yml  linux-x64-build.yml  osx-arm64-build.sh  osx-x64-build.sh  promote-release-build.bat  promote-release-post-build.bat  promote-release.yml  publish-rc-build.bat  publish-rc-post-build.bat  publish-rc-pre-build.bat  publish-rc.yml  pull-signing-secrets.sh  test-rc.yml  test-snapshot.yml  test-version-exists.sh  test-version-exists.yml  wait-for-nuget.sh  win-build-x64.bat  win-build-x86.bat  win-build.bat  win-x64-build.yml  win-x86-build.yml  windows-vs2015-x64-build.bat  windows-vs2015-x86-build.bat
native/: CMakeLists.txt
native/src/: auth.c  cal.c  client_bootstrap.c  crc.c  crt.c  crt.h  event_loop_group.c  exports.h  hash.c  host_resolver.c  http.c  http_client.c  http_client.h  http_connection_manager.c  logger.c  signing.c  socket_options.c  stream.c  stream.h  tls_ctx_options.c
samples/MarshalTest/: Program.cs
samples/MarshalTest/Properties/: launchSettings.json
scripts/: CrcProfile.cs  scripts.csproj
tests/: AssemblyInfo.cs  AuthTest.cs  BaseTest.cs  ClientBootstrapTest.cs  CrcTest.cs  EventLoopGroup.cs  EventLoopGroupTest.cs  ExceptionTest.cs  HashTest.cs  HostResolverTest.cs  HttpClientConnectionTest.cs  SigningTest.cs  SocketOptionsTest.cs  TlsContextTest.cs  UnitTest1.cs  tests.Net35.csproj  tests.csproj
tools/DebugApp/: DebugApp.csproj  Program.cs
tools/Elasticurl/: Elasticurl.NET.csproj  Elasticurl.cs
